feat: leaderboard api (patch query), save best user score
